--- a/module5/1.etcd-member-list.MD
+++ b/module5/1.etcd-member-list.MD
@@ -43,6 +43,9 @@ etcdctl --endpoints=localhost:12379 put /key2 val2
 etcdctl --endpoints=localhost:12379 get --prefix /
 etcdctl --endpoints=localhost:12379 get --prefix / --keys-only
 etcdctl --endpoints=localhost:12379 watch --prefix /
+
+# 删除
+etcdctl --endpoints=localhost:12379 del /key2
 ```
 
 ```sh
