--- a/module5/4.alarm.MD
+++ b/module5/4.alarm.MD
@@ -1,19 +1,27 @@
 ### 设置 etcd 存储大小
 
 ```sh
-etcd --quota-backend-bytes=$((16*1024*1024))
+# 限额16M
+# etcd --quota-backend-bytes=$((16*1024*1024))
+
+etcd --listen-client-urls 'http://localhost:12379' \
+ --advertise-client-urls 'http://localhost:12379' \
+ --listen-peer-urls 'http://localhost:12380' \
+ --initial-advertise-peer-urls 'http://localhost:12380' \
+ --initial-cluster 'default=http://localhost:12380' \
+ --quota-backend-bytes=$((16*1024*1024))
 ```
 
 ### 写爆磁盘
 
 ```sh
-while [ 1 ]; do dd if=/dev/urandom bs=1024 count=1024 | ETCDCTL_API=3 etcdctl put key || break; done
+while [ 1 ]; do dd if=/dev/urandom bs=1024 count=1024 | ETCDCTL_API=3 etcdctl --endpoints=http://127.0.0.1:12379 put key || break; done
 ```
 
 ### 查看 endpoint 状态
 
 ```sh
-ETCDCTL_API=3 etcdctl --write-out=table endpoint status
+ETCDCTL_API=3 etcdctl --write-out=table endpoint status -wtable
 ```
 
 ### 查看 alarm
@@ -28,7 +36,7 @@ ETCDCTL_API=3 etcdctl alarm list
 ETCDCTL_API=3 etcdctl defrag
 ```
 
-### 清理 alarm
+### 清理 alarm， 解除警报
 
 ```sh
 ETCDCTL_API=3 etcdctl alarm disarm
