--- a/module6/basic-auth/Lab: X509/x509.MD
+++ b/module6/basic-auth/Lab: X509/x509.MD
@@ -51,7 +51,7 @@ openssl genrsa -out myuser.key 2048
 # Common Name: myuser
 # Email Address: myuser@gmail.com
 openssl req -new -key myuser.key -out myuser.csr
-# 跳过使用OpenSSL签发证书
+# 跳过OpenSSL签发证书
 openssl req -new -x509 -days 10000 -key .key -out <CA_public>.crt
 
 ```
