--- a/module7/scheduling/6.taint.MD
+++ b/module7/scheduling/6.taint.MD
@@ -1,11 +1,16 @@
 ### Taint node
 
 ```sh
-kubectl taint nodes cadmin for-special-user=cadmin:NoSchedule
+kubectl taint nodes <nodeName> for-special-user=cadmin:NoSchedule
 ```
 
 ### Untaint node
 
 ```sh
-kubectl taint nodes cadmin for-special-user=cadmin:NoSchedule-
+kubectl taint nodes <nodeName> for-special-user=cadmin:NoSchedule-
+```
+
+### Evict All nodes
+```bash
+kubectl taint nodes <nodeName> evict-all-pods=true:NoExecute
 ```
