--- a/k8s-install/k8s-by-kubeadm/3.k8s-install.md
+++ b/k8s-install/k8s-by-kubeadm/3.k8s-install.md
@@ -86,3 +86,6 @@ kubeadm init \
  --cri-socket /run/containerd/containerd.sock \
  --apiserver-advertise-address=192.168.34.2
  ```
+
+### kube-ha
+[kube-ha](../../module9/kubeadm-ha)
