--- a/module9/kubeadm-ha/1.k8s-ha.md
+++ b/module9/kubeadm-ha/1.k8s-ha.md
@@ -1,4 +1,4 @@
-## First master
+## 1. First master
 
 ### Reset kubeadm
 
@@ -43,7 +43,7 @@ $ kubectl create -f https://docs.projectcalico.org/manifests/tigera-operator.yam
 $ kubectl create -f https://docs.projectcalico.org/manifests/custom-resources.yaml
 ```
 
-### Second master
+## 2. Second master
 
 ### Reset kubeadm
 
@@ -68,7 +68,7 @@ kubeadm join master.cncamp.io:6443 --token 2m54gi.0v6s155lujz3ruyk \
 --apiserver-advertise-address=192.168.34.3
 ```
 
-### Check etcd
+## 3. Check etcd
 
 ```sh
 ETCDCTL_API=3
