--- a/module16/knative/2.serving/1.knative-serving.md
+++ b/module16/knative/2.serving/1.knative-serving.md
@@ -1,15 +1,15 @@
 1. create go function & deploy
-```
+```Bash
 func create -l go fn
 cd fn
 func deploy --registry docker.io/mfanjie
 ```
 deploy by skipping build and push
-```
+```Bash
 func deploy --registry docker.io/mfanjie --build=false --push=false
 ```
 more generic way of deploying app on knative is
-```
+```Bash
 kn service create fn \
 --image mfanjie/helloworld-go \
 --port 8080 \
@@ -17,7 +17,7 @@ kn service create fn \
 ```
 
 2. check generated objects
-```
+```Bash
 kubectl get ksvc
 kubectl get configuration
 kubectl get route
