--- a/module16/knative/2.serving/2.mount-secret.md
+++ b/module16/knative/2.serving/2.mount-secret.md
@@ -1,18 +1,18 @@
 1. mount secret to the ksvc
-```
+```Bash
 kubectl apply -f my-secret.yaml
 kn service update fn --mount /my-secret=secret:my-secret
 curl http://fn.default.svc.cluster.local
 ```
 2. invoke function and check the mounted file
-```
+```Bash
 curl http://fn.default.svc.cluster.local
 
 kubectl exec -it demo-00003-deployment-6db58c8c5-fhbgl bash
 cat /my-secret/TEST_KEY
 ```
 3. check ksvc configuration, the volumeMount is added to the ksvc template
-```
+```Bash
 kubectl get ksvc fn -oyaml
     spec:
       containerConcurrency: 0
