--- a/module16/knative/2.serving/3.canary-deployment.md
+++ b/module16/knative/2.serving/3.canary-deployment.md
@@ -1,20 +1,20 @@
 1. check revision info
-```
+```Bash
 kubectl get revision
 NAME         CONFIG NAME   K8S SERVICE NAME   GENERATION   READY   REASON   ACTUAL REPLICAS   DESIRED REPLICAS
 fn-00001     fn                               1            True             0                 0
 fn-00002     fn                               2            True             0                 0
 ```
 2. check traffic information
-```
+```Bash
 kubectl ksvc fn -oyaml
- 
+
    traffic:
    - latestRevision: true
      percent: 100
 ```
 3. update traffic rule to revision info
-```
+```Bash
 cat canary-ksvc.yaml
 apiVersion: serving.knative.dev/v1
 kind: Service
@@ -32,10 +32,10 @@ apply the knative service yaml
 kubectl apply -f canary-ksvc.yaml
 ```
 4. check the function pod status change
-```
+```Bash
 kubectl get po –w
 ```
 5. call the function in centos pod
-```
+```Bash
 curl http://fn.default.svc.cluster.local -I
 ```
