--- a/module16/fission/3.functions/1.go-env.md
+++ b/module16/fission/3.functions/1.go-env.md
@@ -3,8 +3,8 @@
 
 - builder: image for builder
 - image: image for runtime
-- 
-```
+-
+```Bash
 fission env create --name go \
     --builder fission/go-builder-1.16 \
     --image fission/go-env-1.16 \
@@ -16,10 +16,10 @@ fission env create --name go \
 
 ### check the env
 please note the resourceVersion of env, the builder is based on a specified resourceVersion
-```
+```Bash
 kubectl get environment go -oyaml
 ```
-```
+```yml
 apiVersion: fission.io/v1
 kind: Environment
 metadata:
@@ -55,10 +55,10 @@ spec:
 - The resourceVersion of environment is part of the builder deployment name
 - A builder pod is composed by env builder, which is to build the source, and fetcher, which is to retrieve code. The two containers share the same sharedVolume
 
-```
+```Bash
 kubectl get deployment -n fission-builder go-254706 -oyaml
 ```
-```
+```yml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -192,10 +192,10 @@ Same as builder
 - The resourceVersion of environment is part of the poolmgr deployment name
 - A poolmgr pod is composed by env container, which is to run the code, and fetcher, which is to retrieve package. The two containers share the same sharedVolume
 
-```
+```Bash
 kff get deploy poolmgr-go-default-254706
 ```
-```
+```yml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
