--- a/module16/fission/3.functions/2.go-fn.md
+++ b/module16/fission/3.functions/2.go-fn.md
@@ -2,17 +2,17 @@
 ### create function
 - Use default buildcmd, when no buildcmd specified,  `https://github.com/fission/environments/blob/master/go/builder/build.sh` is used
 - The following two commands are equal
-```
+```Bash
 fission fn create --name helloworld --env go --src hello.go --entrypoint Handler
 ```
-```
+```Bash
 fission fn create --name helloworld --env go --src hello.go --entrypoint Handler --buildcmd build
 ```
 ### check function
 - Invoke type is poolmgr by default, which uses the warm pool
 - env is specified as go, as a result, the go environment and builder will be used
 - package refers to the functionName in the source code and the package reference
-```
+```yml
 apiVersion: fission.io/v1
 kind: Function
 metadata:
@@ -46,10 +46,10 @@ spec:
 ### check package
 - User defines sources and environment
 - Builder fill the deployment property, and the deployment archive is put to the share storage
-```
+```Bash
 kubectl get package helloworld-7b1a7f6a-389a-4561-b8f1-44e44b1d2d36 -oyaml
 ```
-```
+```yml
 apiVersion: fission.io/v1
 kind: Package
 metadata:
@@ -92,12 +92,12 @@ status:
 ```
 ## test the function
 ### run function test
-```
+```Bash
 fission function test --name helloworld
 Hello, world!
 ```
 same as command
-```
+```Bash
 kubectl get svc router -n fission
 NAME     TYPE           CLUSTER-IP     EXTERNAL-IP   PORT(S)        AGE
 router   LoadBalancer   10.96.96.129   <pending>     80:31830/TCP   6d10h
@@ -107,9 +107,9 @@ Hello, world!
 ```
 
 ### check what happens
-- One warm pod was labeled for the helloworld function, and the source code is fetched inside the pod by fetcher container, and env container execute the code Handler 
-- A new pod is created to keep the warm pool number to be 3 
-```
+- One warm pod was labeled for the helloworld function, and the source code is fetched inside the pod by fetcher container, and env container execute the code Handler
+- A new pod is created to keep the warm pool number to be 3
+```Bash
 kubectl get po --show-labels -n fission-function
 NAME                                         READY   STATUS    RESTARTS   AGE   LABELS
 poolmgr-go-default-254706-788858ccb8-956j9   2/2     Running   0          16m   environmentName=go,environmentNamespace=default,environmentUid=b5b114ae-d0ff-4fdc-8a5d-baa118e560fb,executorType=poolmgr,functionName=helloworld,functionNamespace=default,functionUid=fcdc0928-6580-44ef-adbc-1612d84c3f57,managed=false,pod-template-hash=788858ccb8
@@ -120,7 +120,7 @@ poolmgr-go-default-254706-788858ccb8-v978z   2/2     Running   0          27s   
 ### check go server impl
 the code is compiled as golang plugin
 
-```
+```Bash
 go build -buildmode=plugin httpserver.go
 ls -la httpserver.so
 ```
